--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 django==3.2.16
+djangorestframework==3.14.0
 django-debug-toolbar==3.2.1
 django-phonenumber-field[phonenumbers]==7.0.2
 environs==9.5.0
